# ymir-project

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  notes
du-manager/: CMakeLists.txt  cmake_install.cmake  deployment_unit.cpp  deployment_unit_helper.cpp  main.cpp  tr181-du-manager
include_priv/: amxhandler.h  common-amx.h  common-task.h  deployment_unit.h  deployment_unit_helper.h  httphandler.h  lxc-container.h  lxcqueue.h
include_priv/utils/: exceptions.h  impl_map.hpp  impl_string.hpp  impl_vector.hpp  json.h  linux.h  main.cpp  map.h  sharedptr.h  string.h  uuid.h  vector.h
liblxcd/: CMakeLists.txt  common-task.cpp  deployment_unit.cpp  deployment_unit_helper.cpp  json.cpp  lxc-container.cpp  lxcqueue.cpp  map.cpp  string.cpp  vector.cpp
odl/: tr157-softwaremodules.odl  tr157-softwaremodules_definitions.odl  tr157-softwaremodules_deployementunits.odl  tr157-softwaremodules_executionunits.odl
odl/defaults.d/: 001-default-container.odl
scripts/: du-make-tarball.py  ee-rootfs-downloader.py  expand.sh  hooks-cleanup  lxcd-supervisor.init  lxcd-supervisor.lua  lxcd.init
src/: Makefile  common-task.cpp  httphandler.cpp  lxc-container.cpp  lxcqueue.cpp  main.cpp
src/backend/amx/: amxhandler.cpp  main.cpp
src/backend/uhttpd/: httphandler.cpp  main.cpp
templates/: lxc-busyboxv2
tests/: json_python.py  makedu.sh  map-test.cpp  metadata.json  notes
